# ChangeLog for sys-apps/jfsutils
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/jfsutils/Attic/ChangeLog,v 1.13 2003/03/11 04:30:20 seemant Exp $

*jfsutils-1.1.1-r1 (10 Mar 2003)

  10 Mar 2003; Seemant Kulleen <seemant@gentoo.org> jfsutils-1.1.1-r1.ebuild:
  patch to allow compile against glibc-2.3.2's errno issue

* jfsutils-1.1.1 (18 Dec 2002)

  18 Dec 2002; Brad Cowan <bcowan@gentoo.org> jfsutils-1.1.1.ebuild,
  files/digest-jfsutils-1.1.0:
  
  Version bump, corrects segfault when using mkfs.jfs on bad block device.
  
* jfsutils-1.1.0-r2 (16 Dec 2002)

  16 Dec 2002; Brad Cowan <bcowan@gentoo.org> jfsutils-1.1.0-r2.ebuild,
  files/digest-jfsutils-1.1.0-r2:
  
  Changed syntax a bit.
      
*jfsutils-1.1.0-r1 (10 Dec 2002)

  10 Dec 2002; Daniel Robbins <drobbins@gentoo.org> jfsutils-1.1.0-r1.ebuild:
  ensured that binaries get installed to /sbin; created mkfs.jfs and fsck.jfs
  symlinks. Unmasking for x86 since we are using a 7-8 month old version of
  jfsutils.

*jfsutils-1.1.0 (20 Nov 2002)

  20 Nov 2002; Brad Cowan <bcowan@gentoo.org> jfsutils-1.1.0.ebuild,
  files/digest-jfsutils-1.1.0 : Version bump.

*jfsutils-1.0.24 (18 Oct 2002)

  18 Oct 2002; Brad Cowan <bcowan@gentoo.org> jfsutils-1.0.24.ebuild,
  files/digest-jfsutils-1.0.24 : Version bump.

*jfsutils-1.0.22 (21 Sep 2002)

  16 Sep 2002; Brad Cowan <bradlyatc@cowancomputers.com> ChangeLog:
  jfsutils-1.0.22.ebuild, files/digest-jfsutils-1.0.22 : version bump, updated
  ebuild

*jfsutils-1.0.21 (24 Aug 2002)

  24 Aug 2002; Brad Cowan <bradlyatc@cowancomputers.com> ChangeLog:
  jfsutils-1.0.21.ebuild, files/digest-jfsutils-1.0.21 : version bump, updated
  ebuild (resolves bug #6984 -- commited by Matthew Kennedy
  <mkennedy@gentoo.org>)

*jfsutils-1.0.17 (25 Apr 2002)

  23 Oct 2002; Mike Frysinger <vapier@gentoo.org> :
  Removed bootcd USE flag
