@@ -1,0 +1,1 @@
+MD5 324b8b8f8c09817fb79dc093092998f2 jfsutils-1.1.2.tar.gz 499839
