@@ -1,6 +1,13 @@
 # ChangeLog for sys-apps/jfsutils
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/jfsutils/Attic/ChangeLog,v 1.13 2003/03/11 04:30:20 seemant Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/jfsutils/Attic/ChangeLog,v 1.14 2003/03/26 07:36:56 bcowan Exp $
+
+* jfsutils-1.1.2 (26 Mar 2003)
+
+  26 Mar 2003; Brad Cowan <bcowan@gentoo.org> jfsutils-1.1.2.ebuild,
+  files/digest-jfsutils-1.1.2:
+  
+  Version bump, removed errno patch as it was fixed upstream.
 
 *jfsutils-1.1.1-r1 (10 Mar 2003)
 
